<resources>
    <string name="app_name">Redwood Realty</string>
    <string name="searchBarPlaceholder">Search…</string>
    <string name="regionsTitleHomeActivity">Regions</string>
    <string name="regionsDescHomeActivity">Search high quality listings in your favorite region</string>
    <string name="explore">Explore</string>
    <string name="recentProperties">Recent Properties</string>
    <string name="recentPropertiesDescHomeActivity">Take a look out our most recent listings</string>
    <string name="view_listing">View listing</string>
    <string name="verticalLayout">Vertical layout</string>
    <string name="horizontalLayout">Horizontal layout</string>
    <string name="bed">Bed</string>
    <string name="bath">Bath</string>
    <string name="sqft">sqft</string>

    <string name="submitEmail">Send email</string>
    <string name="message">Message</string>
    <string name="emailSubject">Email Subject</string>
    <string name="contact_agent">Contact Agent</string>
    <string name="askingPrice">Asking Price</string>
    <string name="squareFeet">Square Feet</string>
    <string name="numOfBed">Num of Bed</string>
    <string name="numOfBath">Num of bath</string>
    <string name="_5thImage">5th image</string>
    <string name="_6thImage">6th image</string>
    <string name="_4thImage">4th image</string>
    <string name="_3rdImage">3rd image</string>
    <string name="_1stImage">1st image</string>
    <string name="_2ndImage">2nd image</string>
    <string name="sellProperty">Sell property</string>
    <string name="enter_address">Enter address</string>
    <string name="search_a_property_by_address">Search a property by address</string>
    <string name="list_property">List property</string>
    <string name="share_fb">Share on Facebook</string>
    <string name="communicate">Communicate</string>
    <string name="see_sent_messages">See sent messages</string>
    <string name="share_on_twitter">Share on twitter</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="liked_listings">Liked Listings</string>
    <string name="your_liked_listings">Your liked listings</string>
    <string name="armenian" translatable="false">հայերեն</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="english" translatable="false">English</string>
    <string name="app_contact_email" translatable="false">info@redwood.com</string>
    <string name="list_property_for_sale">List property for sale</string>
    <string name="click_to_enter_address">Click to enter address</string>
    <string name="list_of_all_agents">List of all agents</string>
    <string name="view_agent">View Agent</string>
    <string name="about_desc">Redwood Realty is a real estate listing application that allows homeowners who want to sell their house to list their property and be represented by one of many of the top real estate agents that are on our platform.</string>
    <string name="please_select_a_language">Please select a language.</string>
    <string name="choose_lang_armenian">Ընտրեք լեզու</string>
    <string name="select_image">Select Image (6 required)</string>

    <string name="login_shared_pref" translatable="false">Login</string>
    <string name="user_id_shared_pref" translatable="false">UserId</string>
    <string name="actions">Property Actions</string>
    <string name="delete">Delete</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_email">Your Email:</string>
    <string name="your_full_name">Your Full Name:</string>
    <string name="cancel">Cancel</string>
    <string name="edit_your_profile">Edit your profile</string>


    <string name="selected_language" translatable="false">Selected Language</string>
    <string name="home_page">Home Page</string>
    <string name="edit">Edit</string>
    <string name="permanently_delete_your_listing">Permanently delete your listing?</string>
    <string name="contact">Contact</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="logged_in">Logged in</string>
    <string name="account_does_not_exits">Account does not exist.</string>
    <string name="fix_the_errors">Please fix the errors</string>
    <string name="fill_in_all_fields">Please fill in all the fields (6 images are required)</string>
    <string name="full_name_required">Full name is required</string>
    <string name="password2_is_required">Password confirmation is required</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="pass_must_be_longer">Password must be longer than 6 characters</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="error_while_updating_your_account">There was an error while updating your account.</string>
    <string name="error_while_registering_your_account">There was an error while registering your account.</string>
    <string name="account_registered">Account registered</string>
    <string name="message_has_been_sent">Message has been sent</string>
    <string name="was_sent"> was sent!</string>
    <string name="your_message_for">Your message for </string>
    <string name="view_agents">View Agents</string>
    <string name="email_sent">Email sent</string>
    <string name="share_title">Hey! Check Redwood Realty, a new real estate listing android app!</string>
    <string name="share_via">Share Redwood Realty via</string>
    <string name="share">Share</string>
    <string name="calculate">Calculate</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="price_of_the_house">Price of the house</string>
    <string name="down_payment">Down Payment (%)</string>
    <string name="down_payment_calculator">Down Payment Calculator</string>
    <string name="house_price_required">House price required</string>
    <string name="down_payment_required">Down payment required</string>
    <string name="email_exists">An account with that email already exists.</string>
</resources>