<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_property"
            android:icon="@drawable/sell_property"
            android:title="@string/list_property" />

        <item
            android:id="@+id/nav_list_of_agents"
            android:icon="@drawable/ic_agents"
            android:title="@string/list_of_all_agents" />

        <item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_page" />

        <item
            android:id="@+id/nav_down_payment_calculator"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/down_payment_calculator" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />
        </menu>
    </item>

</menu>