<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/about"
        android:id="@+id/about"/>

    <item
        android:title="@string/your_profile"
        android:id="@+id/your_profile"/>

    <item
        android:title="@string/armenian"
        android:id="@+id/changeLanguage"/>

    <item
        android:title="@string/logout"
        android:id="@+id/logout"/>

    <item
        android:title="@string/search"
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"/>

    <item
        android:title="Like"
        android:id="@+id/likeItem"
        android:icon="@drawable/like_icon"
        app:showAsAction="always"/>

</menu>