<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/globalMargin"
    tools:context=".Fragments.EditProfileDialogFragment">


    <EditText
        android:id="@+id/editFullNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFullNameInput"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEmailInput"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPassword2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPasswordInput"
        android:ems="10"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/editUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword2Input"
        android:backgroundTint="@color/btnColor"
        android:text="@string/edit_your_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_big" />


</RelativeLayout>