<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/globalMargin"
    tools:context=".Fragments.ProfileDialogFragment">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/your_profile"
        android:textColor="@color/h1TitleBlack"
        android:textSize="@dimen/h1Title" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_big" />

    <TextView
        android:id="@+id/your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="aperson@gmail.com" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_full_name"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_big" />

    <TextView
        android:id="@+id/your_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Sevag Saro Aredjian" />

    <Button
        android:id="@+id/userEditBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_big" />

    <Button
        android:id="@+id/userCancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#3f3f3f"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_big" />

</LinearLayout>