<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#DFDFDF"
    android:padding="20dp"
    tools:context=".Fragments.ContactPropertyAgentFragment">

    <TextView
        android:id="@+id/contactAgentFormH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contact_agent"
        android:textColor="@color/h1TitleBlack"
        android:textSize="@dimen/h1Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contactAgentFormSubjectInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/emailSubject"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactAgentFormH1" />

    <EditText
        android:id="@+id/contactAgentFormMessageInput"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#ECECEC"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactAgentFormSubjectInput"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submitEmail"
        android:textAllCaps="false"
        app:backgroundTint="@color/btnColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactAgentFormMessageInput" />

</androidx.constraintlayout.widget.ConstraintLayout>