<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/globalMargin"
    tools:context=".Fragments.DownPaymentCalculationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h3Title"
        android:textColor="@color/h1TitleBlack"
        android:layout_marginBottom="10dp"
        android:text="@string/price_of_the_house"/>

    <EditText
        android:id="@+id/housePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="100000"
        android:inputType="numberDecimal"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h3Title"
        android:textColor="@color/h1TitleBlack"
        android:layout_marginBottom="10dp"
        android:text="@string/down_payment"/>

    <EditText
        android:id="@+id/downPaymentPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/default_is_5"
        android:inputType="numberDecimal"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/calculateDownPaymentBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="6dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textAllCaps="false" />

</LinearLayout>